# piping-server-rust

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  app.json  heroku.dockerfile  heroku.yml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-latest.yml
resource/: index.html
src/: dynamic_resources.rs  http_util.rs  lib.rs  macros.rs  main.rs  piping_server.rs  req_res_handler.rs  util.rs
tests/: piping_server.rs
